--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -1,4 +1,17 @@
 spring:
+  profiles:
+    active: local
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+---
+spring:
+  config:
+    activate:
+      on-profile: local
   datasource:
     url: jdbc:postgresql://localhost:5432/bookesh
     username: postgres
@@ -12,6 +25,28 @@ spring:
   spring:
     rabbitmq:
       host: localhost
+      port: 5672
+      username: guest
+      password: guest
+
+---
+spring:
+  config:
+    activate:
+      on-profile: docker
+  datasource:
+    url: jdbc:postgresql://postgres_db:5432/bookesh
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+    platform: postgres
+  jpa:
+    hibernate:
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+  spring:
+    rabbitmq:
+      host: rabbitmq
       port: 5672
       username: guest
       password: guest
